--- a/template.html
+++ b/template.html
@@ -3,10 +3,41 @@
 
   <head>
     <style>
+      h1 {
+        font-family: sans-serif;
+      }
+      #black {
+        background-color: black;
+        width:500px;
+        height: 100px;
+        margin: 0;
+      }
+
+      #yellow {
+        background-color: #ffd700;
+        width:500px;
+        height: 100px;
+        margin: 0;
+      }
+
+      #red {
+        background-color: #ff0000;
+        width: 500px;
+        height: 100px;
+        margin: 0;
+      }
+
+      body {
+        margin: 0;
+      }
+      
     </style>
   </head>
 
   <body>
+    <div class="box" id="black"></div>
+    <div class="box" id="red"></div>
+    <div class="box" id="yellow"></div>
   </body>
-
+ 
 </html>
