--- a/template.html
+++ b/template.html
@@ -3,41 +3,29 @@
 
   <head>
     <style>
-      h1 {
-        font-family: sans-serif;
-      }
-      #black {
-        background-color: black;
-        width:500px;
-        height: 100px;
-        margin: 0;
-      }
+     #box1 {
+       display: inline-block;
+       height: 100px;
+       width: 100px;
+       background-color: black;
+       margin-left: 50px;
+       margin-top: 50px;
+     }
 
-      #yellow {
-        background-color: #ffd700;
-        width:500px;
-        height: 100px;
-        margin: 0;
-      }
-
-      #red {
-        background-color: #ff0000;
-        width: 500px;
-        height: 100px;
-        margin: 0;
-      }
-
-      body {
-        margin: 0;
-      }
-      
+     #box2 {
+       display: inline-block;
+       height: 100px;
+       width: 100px;
+       background-color: black;
+       margin-left: 50px;
+       margin-top: 50px;
+     }
     </style>
   </head>
 
   <body>
-    <div class="box" id="black"></div>
-    <div class="box" id="red"></div>
-    <div class="box" id="yellow"></div>
+    <div class="box" id="box1"></div>
+    <div class="box" id="box2"></div>
   </body>
  
 </html>
