--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 
   <head>
     <style>
-     #box1 {
+     .box {
        display: inline-block;
        height: 100px;
        width: 100px;
@@ -12,14 +12,6 @@
        margin-top: 50px;
      }
 
-     #box2 {
-       display: inline-block;
-       height: 100px;
-       width: 100px;
-       background-color: black;
-       margin-left: 50px;
-       margin-top: 50px;
-     }
     </style>
   </head>
 
